<resources>
    <string name="sort_ascending">Sort Ascending</string>
    <string name="sort_descending">Sort Descending</string>
    <string name="clear_sorting">Clear</string>
    <string name="row_show">Show 5. Row</string>
    <string name="row_hide">Hide 5. Row</string>

    <string name="app_name">Athone Sayin | POS</string>
    <string name="lbl_pos_web_config" translatable="false">Athone Sayin | POS-Admin</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_welcome">Welcome</string>
    <string name="lbl_glad_to_see_you">glad to see you!</string>
    <string name="lbl_create_account">Create account</string>
    <string name="lbl_forgot_password">Forgot password ?</string>
    <string name="lbl_btn_login">Login</string>
    <string name="lbl_hint_user_name">User name</string>
    <string name="lbl_hint_user_password">Password</string>
    <string name="lbl_hint_user_display_name">Name</string>
    <string name="lbl_btn_create">Create Account</string>
    <string name="lbl_hint_category_name">Category name</string>
    <string name="lbl_btn_ok">Ok</string>
    <string name="lbl_btn_cancel">Cancel</string>
    <string name="lbl_category_color">Category color</string>
    <string name="lbl_category_text_color">Category text color</string>
    <string name="lbl_active_status">Active</string>
    <string name="lbl_delete_unavailable">Delete unavailable.</string>
    <string name="lbl_btn_delete">Delete</string>
    <string name="lbl_btn_edit">Edit</string>
    <string name="lbl_btn_add">Add</string>
    <string name="lbl_product_color">Product Color</string>
    <string name="lbl_product_text_color">Product Text Color</string>
    <string name="lbl_hint_product_price">Price</string>
    <string name="lbl_hint_product_retail_price">Retail Price</string>
    <string name="lbl_hint_product_name">Product name</string>
    <string name="lbl_show_low_balance">ပစ္စည်းအရေအတွက် %s ထက်လျော့နည်းပါက notification တွင်ပြရန်။</string>
    <string name="lbl_hint_product_count">Product count</string>
    <string name="lbl_hint_phone_number">Phone number</string>
    <string name="lbl_hint_user_address">Address</string>
    <string name="lbl_hint_percentage_title">Tax Percentage</string>
    <string name="lbl_hint_percentage">Enter Tax Percentage(5)</string>
    <string name="lbl_percentage_change_title">Tax Percentage</string>
    <string name="lbl_hint_limitation_title">Limitation Alert</string>
    <string name="lbl_hint_pay_amount_title">Pay Amount</string>
    <string name="lbl_hint_limitation">Enter Limitation Alert(5)</string>
    <string name="lbl_hint_pay_amount">Enter Pay Amount</string>
    <string name="lbl_limitation_change_title">Alert Limitation Amount</string>
    <string name="lbl_add_pay_money">Add Pay Amount</string>

    <string name="dummy_store_address" translatable="false">30th Leikpayakan, Bago</string>
    <string name="dummy_store_phone" translatable="false">09973419006, 09786596541</string>
    <string name="lbl_total_amount">Total</string>
    <string name="lbl_tax_amount">Tax Amount (%d%%)</string>
    <string name="lbl_net_amount">Net Amount</string>
    <string name="lbl_paid_amount">Paid By Cash</string>
    <string name="lbl_change_amount">Change</string>

    <string name="pref_header_about">About</string>
    <string name="prefs_version_name">Version</string>
    <string name="prefs_developed_by">Develop by</string>
    <string name="prefs_developed_by_me">Kyaw Htut</string>
    <string name="label_setting_title">Setting</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_btn_new_voucher">Create new voucher.</string>
    <string name="lbl_category_new">New Category</string>
    <string name="lbl_category_edit">Edit Category</string>
    <string name="lbl_customer_new">New Customer</string>
    <string name="lbl_customer_edit">Edit Customer</string>
    <string name="lbl_product_new">New Product</string>
    <string name="lbl_hint_product_code">Product Code</string>
    <string name="lbl_product_edit">Edit Product</string>
    <string name="lbl_user_new">New User</string>
    <string name="lbl_user_edit">Edit User</string>
    <string name="lbl_scanner">Scan code</string>
    <string name="lbl_choose_customer">Select Customer</string>
    <string name="lbl_discount_amount">Discount</string>
    <string name="lbl_hint_discount_amount">Discount Amount</string>
    <string name="lbl_hint_paid_amount">Paid Amount</string>
    <string name="lbl_hint_product_description">Product Description</string>
    <string name="lbl_paired_devices">Paired devices</string>
    <string name="lbl_other_devices">Other devices</string>
    <string name="lbl_scan_device">Scan Device</string>
    <string name="lbl_ticket_history">Ticket History</string>
    <string name="lbl_add_payment">Add Payment</string>
    <string name="lbl_btn_check_device">Check</string>
    <string name="lbl_check_device_title">Check Phone No.</string>
    <string name="lbl_btn_retry">Retry</string>

    <string name="lbl_debt">Debt</string>
    <string name="lbl_kyat">Ks</string>
    <string name="lbl_delete_title">Delete</string>
    <string name="lbl_delete_fail_title">Delete Fail</string>
    <string name="lbl_delete_message">Are you sure to delete %s?</string>
    <string name="lbl_delete_fail_message">You can\'t delete %s.</string>

    <string name="lbl_total_sale_title">Total Sales</string>
    <string name="lbl_total_item_title">Total Items</string>
    <string name="lbl_total_item_warning_title">Total Remain Item</string>
    <string name="lbl_total_customer_title">Total Customer</string>
    <string name="lbl_most_sell_product">Sell Product</string>
    <string name="lbl_home_title_title">Vouchers</string>

    <!--Empty data-->
    <string name="lbl_empty_items">There is no Items.</string>
    <string name="lbl_empty_products">There is no Products.</string>
    <string name="lbl_empty_users">There is no Users.</string>
    <string name="lbl_empty_customers">There is no Customers.</string>
    <string name="lbl_empty_tickets">There is no Vouchers.</string>
</resources>
