<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <com.kyawhtut.fontchooserlib.component.MMTextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:text="@string/lbl_welcome"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_heading_2x"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.kyawhtut.fontchooserlib.component.MMTextView
        android:id="@+id/tv_glad_to_see_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/lbl_glad_to_see_you"
        android:textColor="@color/color333"
        android:textSize="@dimen/text_regular_2x"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_glad_to_see_you">

        <com.kyawhtut.fontchooserlib.component.MMTextInputLayout
            android:id="@+id/edt_user_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_hint_user_name"
            app:layout_constraintBottom_toTopOf="@+id/edt_user_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <com.kyawhtut.fontchooserlib.component.MMTextInputEditText
                android:id="@+id/ed_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textFilter" />
        </com.kyawhtut.fontchooserlib.component.MMTextInputLayout>

        <com.kyawhtut.fontchooserlib.component.MMTextInputLayout
            android:id="@+id/edt_user_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/lbl_hint_user_password"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@+id/tv_forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_user_name">

            <com.kyawhtut.fontchooserlib.component.MMTextInputEditText
                android:id="@+id/ed_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.kyawhtut.fontchooserlib.component.MMTextInputLayout>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/lbl_forgot_password"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="@+id/edt_user_password"
            app:layout_constraintTop_toBottomOf="@+id/edt_user_password" />

        <com.kyawhtut.fontchooserlib.component.MMMaterialButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingTop="@dimen/margin_medium_2"
            android:paddingBottom="@dimen/margin_medium_2"
            android:text="@string/lbl_btn_login"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_regular_2x"
            app:cornerRadius="@dimen/margin_card_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>