<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin_medium_2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/lbl_percentage_change_title"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintEnd_toEndOf="@+id/tv_hint_percentage"
        app:layout_constraintStart_toStartOf="@+id/tv_hint_percentage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hint_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:fontFamily="serif"
        android:text="@string/lbl_hint_percentage_title"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edt_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edt_input"
        android:hint="@string/lbl_hint_percentage"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/tv_hint_percentage"
        app:layout_constraintStart_toEndOf="@+id/ic_edt_icon_percentage"
        app:layout_constraintTop_toTopOf="@+id/ic_edt_icon_percentage" />

    <ImageView
        android:id="@+id/ic_edt_icon_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/bg_edt_input_icon"
        android:src="@drawable/ic_tax_percentage"
        android:tint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="@+id/tv_hint_percentage"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_percentage" />
</androidx.constraintlayout.widget.ConstraintLayout>
